fix padding and text alignment

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -5,8 +5,10 @@ body{
     margin-left: 0;
     margin-right: 0;
     margin-bottom: 0;
+    
 }
 .bodyCSS{
+
     margin-top: 100px;
 }
 
@@ -28,7 +30,6 @@ body{
     justify-content: center;
 }
 .col{
-    padding: 5px;
     border: 1px solid gray;
 }
 @media(min-width:500px){
@@ -78,6 +79,8 @@ body{
 .text{
     text-align: center;
     font-size: medium;
+    width: 80%;
+    margin: 5px auto;
 }
 .maintext{
     text-align: left;
@@ -88,7 +91,6 @@ body{
     bottom: 0;
     border: 1px black solid;
     width: 100%;
-    height: 50px;
     background-color: rgba(98, 44, 6);
     line-height: 45px;
     padding: 5px;
@@ -98,4 +100,5 @@ body{
 
 .test{
     height: 200px;
+    
 }
